--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Tony Ly Portfolio</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      rel="stylesheet" type="text/css" />
+    <link href="style.css" rel="stylesheet" type="text/css" />  
+  </head>
+  <body>
+    <header>
+      <h1>Tony Ly</h1>
+      <p>Aspiring Software Developer</p>
+    </header>
+    <main>
+      <div>
+        
+      </div>
+    </main>
+  </body>
+</html>
