--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
     </header>
     <main>
       <div>
-        
+        <img src="Self.jpg" alt="Selfie in front of Eiffel Tower."
       </div>
+      <article>
+        <h2>Hi! I'm Tony Ly</h2>
+      </article>
+   
     </main>
   </body>
 </html>
