--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <h1>Tony Ly</h1>
-      <p>Aspiring Software Developer</p>
+      <p>Software Developer</p>
     </header>
     <main>
       <div>
@@ -19,6 +19,7 @@
       </div>
       <article>
         <h2>Hi! I'm Tony Ly</h2>
+        <p>I am a software developer living in Long Beach, California.</p>
       </article>
    
     </main>
