--- a/index.html
+++ b/index.html
@@ -11,17 +11,41 @@
   <body>
     <header>
       <h1>Tony Ly</h1>
-      <p>Software Developer</p>
+      <h2>Software Developer</h2>
     </header>
     <main>
-      <div>
+      <!-- Introduction -->
+      <section>
         <img src="Self.jpg" alt="Selfie in front of Eiffel Tower."
-      </div>
-      <article>
+      
+      
         <h2>Hi! I'm Tony Ly</h2>
         <p>I am a software developer living in Long Beach, California.</p>
-      </article>
-   
+      </section>
+      <!-- About Me -->
+      <section>
+        <h2>About Tony</h2>
+        <p>I may be new to software developing, but I am eager to learn and to work with others.</p>
+        <p>I am also interested in:</p>
+        <ul>
+          <li>Learning about AI.</li>
+          <li>Playing tennis.</li>
+          <li>Finding great food spots to frequent.</li>
+        </ul>
+      </section>
+      <!-- Contact -->
+      <section>
+        <h2>Contact Tony</h2>
+        <p>Please feel free to contact or follow me:</p>
+        <ol>
+          <li>
+            <a href="www.linkedin.com/in/tony-ly-bookworm">LinkedIn</a>
+          </li>
+          <li>
+            <a href="https://github.com/TonyLy03">GitHub</a>
+          </li>
+        </ol>
+      </section>
     </main>
   </body>
 </html>
