--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
         <h2>Hi! I'm Tony Ly</h2>
         <p>I am a software developer living in Long Beach, California.</p>
       </section>
+      <hr>
       <!-- About Me -->
-      <section>
+      <article>
         <h2>About Tony</h2>
         <p>I may be new to software developing, but I am eager to learn and to work with others.</p>
         <p>I am also interested in:</p>
@@ -32,11 +33,12 @@
           <li>Playing tennis.</li>
           <li>Finding great food spots to frequent.</li>
         </ul>
-      </section>
+      </article>
+      <hr>
       <!-- Contact -->
       <section>
         <h2>Contact Tony</h2>
-        <p>Please feel free to contact or follow me:</p>
+        <h3>Please feel free to contact or follow me:</h3>
         <ol>
           <li>
             <a href="www.linkedin.com/in/tony-ly-bookworm">LinkedIn</a>
@@ -47,5 +49,8 @@
         </ol>
       </section>
     </main>
+    <footer>
+      <p>&copy; Tony Ly</p>
+    </footer>
   </body>
 </html>
