--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       
         <h2>Hi! I'm Tony Ly</h2>
         <p>I am a software developer living in Long Beach, California.</p>
+        <p>Here are my <a href="#contact">contacts</a></p>
       </section>
       <hr>
       <!-- About Me -->
@@ -36,7 +37,7 @@
       </article>
       <hr>
       <!-- Contact -->
-      <section>
+      <section id="contact">
         <h2>Contact Tony</h2>
         <h3>Please feel free to contact or follow me:</h3>
         <ol>
