--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
       <!-- Introduction -->
       <section>
-        <img src="Self.jpg" alt="Selfie in front of Eiffel Tower."
+        <img src="Self.jpg" alt="Selfie in front of Eiffel Tower." height="200">
       
       
         <h2>Hi! I'm Tony Ly</h2>
