--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h3>Please feel free to contact or follow me:</h3>
         <ol>
           <li>
-            <a href="www.linkedin.com/in/tony-ly-bookworm">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/tony-ly-bookworm">LinkedIn</a>
           </li>
           <li>
             <a href="https://github.com/TonyLy03">GitHub</a>
