--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
   </head>
   <body>
     <header>
-      <h1>Tony Ly</h1>
+      <div class="fancy">Tony Ly</div>
       <h2>Software Developer</h2>
     </header>
     <main>
       <!-- Introduction -->
       <section>
-        <img src="Self.jpg" alt="Selfie in front of Eiffel Tower." height="200">
+        <img src="Self.jpg" alt="Selfie in front of Eiffel Tower." height="300">
       
       
-        <h2>Hi! I'm Tony Ly</h2>
+        <h1>Hi! I'm Tony Ly</h1>
         <p>I am a software developer living in Long Beach, California.</p>
         <p>Here are my <a href="#contact">contacts</a></p>
       </section>
       <hr>
       <!-- About Me -->
-      <article>
+      <article class="border">
         <h2>About Tony</h2>
         <p>I may be new to software developing, but I am eager to learn and to work with others.</p>
         <p>I am also interested in:</p>
