--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <main>
       <!-- Introduction -->
-      <section>
+      <section class="border">
         <img src="Self.jpg" alt="Selfie in front of Eiffel Tower." height="300">
       
       
@@ -37,7 +37,7 @@
       </article>
       <hr>
       <!-- Contact -->
-      <section id="contact">
+      <section id="contact" class="border">
         <h2>Contact Tony</h2>
         <h3>Please feel free to contact or follow me:</h3>
         <ol>
