--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h2>About Tony</h2>
         <p>Most of my life I have been mainly working odd jobs.</p>
         <p>But now I am ready to start a new career in software development.</p>
-        <p>I may be new to software developing, but I am eager to learn and to work with others.</p>
+        <p>I may be new to software development, but I am eager to learn and to work with others.</p>
         <p>I am also interested in:</p>
         <ul>
           <li>Learning about AI.</li>
