--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <main>
       <!-- Introduction -->
       <section class="border">
-        <img src="Self.jpg" alt="Selfie in front of Eiffel Tower." height="300">
+        <div class="center">
+          <img src="Self.jpg" alt="Selfie in front of Eiffel Tower." height="300">
+        </div>
         <h1>Hi! I'm Tony Ly</h1>
         <p>I am a software developer living in Long Beach, California.</p>
         <p>Here are my <a href="#contact">contacts</a></p>
