--- a/index.html
+++ b/index.html
@@ -18,38 +18,42 @@
       <section class="border">
         <div class="center">
           <img src="Self.jpg" alt="Selfie in front of Eiffel Tower." height="300">
+          <h1>Hi! I'm Tony Ly</h1>
+          <p>I am a software developer living in Long Beach, California.</p>
+          <p>Here are my <a href="#contact">contacts</a></p>
         </div>
-        <h1>Hi! I'm Tony Ly</h1>
-        <p>I am a software developer living in Long Beach, California.</p>
-        <p>Here are my <a href="#contact">contacts</a></p>
       </section>
       <hr>
       <!-- About Me -->
       <article class="border">
         <h2>About Tony</h2>
-        <p>Most of my life I have been mainly working odd jobs.</p>
-        <p>But now I am ready to start a new career in software development.</p>
-        <p>I may be new to software development, but I am eager to learn and to work with others.</p>
-        <p>I am also interested in:</p>
-        <ul>
-          <li>Learning about AI.</li>
-          <li>Playing tennis.</li>
-          <li>Finding great food spots to frequent.</li>
-        </ul>
+        <div class="center">
+          <p>Most of my life I have been mainly working odd jobs.</p>
+          <p>But now I am ready to start a new career in software development.</p>
+          <p>I may be new to software development, but I am eager to learn and to work with others.</p>
+          <p>I am also interested in:</p>
+          <ul>
+            <li>Learning about AI.</li>
+            <li>Playing tennis.</li>
+            <li>Finding great food spots to frequent.</li>
+          </ul>
+        </div>
       </article>
       <hr>
       <!-- Contact -->
       <section id="contact" class="border">
         <h2>Contact Tony</h2>
         <h3>Please feel free to contact or follow me:</h3>
-        <ol>
-          <li>
-            <a href="https://www.linkedin.com/in/tony-ly-bookworm">LinkedIn</a>
-          </li>
-          <li>
-            <a href="https://github.com/TonyLy03">GitHub</a>
-          </li>
-        </ol>
+        <div class="center">
+          <ol>
+            <li>
+              <a href="https://www.linkedin.com/in/tony-ly-bookworm">LinkedIn</a>
+            </li>
+            <li>
+              <a href="https://github.com/TonyLy03">GitHub</a>
+            </li>
+          </ol>
+        </div>
       </section>
     </main>
     <footer>
